<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_main_bg"
    tools:context=".LessonsQuiz">

    <TextView
        android:id="@+id/lesson_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="247dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="247dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/lesson1_name"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/what_is_ai_text"
        android:layout_width="600dp"
        android:layout_height="150dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/text_bg"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/what_is_ai_text"
        android:textColor="@color/purple3"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_title" />

    <TextView
        android:id="@+id/learning_material_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:paddingHorizontal="25dp"
        android:text="@string/what_is_ai"
        android:textColor="#512D6D"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/what_is_ai_text" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="500dp"
        android:layout_height="330dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="240dp"
        android:src="@drawable/lesson1_img1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/learning_material_text"
        app:layout_constraintTop_toBottomOf="@+id/learning_material_text" />


    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="Back"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="18dp"
        android:visibility="invisible"
        android:textColor="#CDF0EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textSize="40dp"
        android:background="#00000000"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:textColor="#CDF0EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>