<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levels_bg"
    tools:context=".QuizGameStartPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/levels_text_box"
            android:paddingTop="80sp"
            android:text="@string/levels_text"
            android:textAlignment="center"
            android:textColor="#F6F5F2"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/poppins"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="41dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="230dp"
            android:layout_marginEnd="30dp"
            android:paddingTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:srcCompat="@drawable/levels_game_img"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">
            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="142dp"
                android:layout_marginLeft="15dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/level1_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="#7BC9FF">

                    <ImageView
                        android:id="@+id/level1"
                        android:layout_width="250dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/level1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/level1_text"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="142dp"
                android:layout_marginLeft="60dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/level2_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="#5FBDFF">

                    <ImageView
                        android:id="@+id/level2"
                        android:layout_width="230dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/level2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/level2_text"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="142dp"
                android:layout_marginLeft="15dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="#39B5E0">

                    <ImageView
                        android:id="@+id/level3"
                        android:layout_width="230dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/level3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/level3_text"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="142dp"
                android:layout_marginLeft="60dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="#7091F5">

                    <ImageView
                        android:id="@+id/level4"
                        android:layout_width="230dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/level4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/level4_text"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="142dp"
                android:layout_marginLeft="15dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="#8696FE">

                    <ImageView
                        android:id="@+id/level5"
                        android:layout_width="230dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/level5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/level5_text"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="142dp"
                android:layout_marginLeft="60dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="#6C9BCF">

                    <ImageView
                        android:id="@+id/level6"
                        android:layout_width="230dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/level6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/level6_text"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>