<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_page_bg"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        >

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/arrow_back_24px"
            android:padding="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text"
            android:fontFamily="@font/poppins"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_icon" />

            <TextView
                android:id="@+id/userFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Username"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="user email"
                android:textColor="#CCFFFFFF"
                android:textSize="30dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/progress_layout"
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:padding="15dp">
                <!-- Progress -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/progressIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_analytics_24"
                        android:background="@drawable/round_back_private_account"
                        android:padding="12dp"
                        android:onClick="showLanguageDialog" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/progress_text"
                        android:fontFamily="@font/poppins"
                        android:textSize="20dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/progressIcon" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/chevron_right_24px"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/languages_layout"
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">
                <!-- Languages -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/languagesIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/language_24px"
                        android:background="@drawable/round_back_not"
                        android:padding="12dp"
                        android:onClick="showLanguageDialog" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/languages_text"
                        android:fontFamily="@font/poppins"
                        android:textSize="20dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/languagesIcon" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/chevron_right_24px"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">
                <!--About Us-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/aboutUsIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/info_24px"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/about_text"
                        android:fontFamily="@font/poppins"
                        android:textSize="20dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/aboutUsIcon" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/chevron_right_24px"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_back_white10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!--Logout-->
                <RelativeLayout
                    android:id="@+id/logout_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logoutIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/settings_power_24px"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp" />

                    <TextView
                        android:id="@+id/logout_text"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/logout_text"
                        android:fontFamily="@font/poppins"
                        android:textSize="20dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/logoutIcon" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/chevron_right_24px"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>